# Parallelism-theory-tasks

./: README.md
task1/: CMakeLists.txt  Makefile  main.cpp  sum_sin
task2/: description_of_computing_node.txt
task2/part1/: main.cpp  plot.py  results.csv
task2/part2/: main.cpp  plot.py  results.csv
task2/part3/: main.cpp  main1.cpp  main2.cpp  plot.py  results_1.csv  results_2.csv
task3/part1/: CMakeLists.txt  Makefile  main  main.cpp  plot.py  results_thread.csv
task3/part2/: Makefile  check  check.cpp  main  main.cpp  pow_output.txt  sin_output.txt  sqrt_output.txt
task4/: main.py
task5/: main.py
task6/: Makefile  full_report1.nsys-rep  heat_cpu  heat_gpu  heat_multicore  main.cpp  main.py  main2  main2.cpp  output.txt  output2.txt  report.nsys-rep  report1.nsys-rep  report1.sqlite  report2.nsys-rep  report2.sqlite  test.cpp
task7/: Makefile  heat_gpu  main.cpp  output.txt
task8/: Makefile  executable  full_report1.nsys-rep  heat_gpu  main.cu
